Atualização do favoritos da pagina Home.

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -16,7 +16,7 @@
     "no_account": "I don't have a GREEN account yet!",
     "hello" : "Hello %s",
     "goals" : "Goals",
-    "payments" : "Payments",
+    "extract" : "Extract",
     "my_green" : "My Green",
     "my_cards" : "My Cards",
     "todo_list" : "To-do List",
