--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -15,7 +15,7 @@
     "no_account": "Ainda não tenho uma conta GREEN!",
     "hello": "Olá %s",
     "goals" : "Metas",
-    "payments" : "Pagamentos",
+    "extract" : "Extrato",
     "my_green" : "Meu Green",
     "my_cards" : "Meus Cartões",
     "todo_list" : "Lista de Tarefas",
