--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -39,7 +39,7 @@
     "academy" : "Academy",
     "travel" : "Travel",
     "pharmacy" : "Pharmacy",
-    "description" : "Description",
+    "description" : " Description ",
     "value" : "Value",
     "money" : "$ ",
     "invalid_value" : "Invalid value",
@@ -73,6 +73,44 @@
     "set_limit" : "Set New Financial Limit",
     "limit_updte": "Limit updated successfully!!",
     "update": "Update",
-    "others" : "Others"
+    "others" : "Others",
+    "register_sucess" : "Registration completed successfully!",
+    "email_already" : "Email already registered, please choose another!",
+    "error_register" : "Error when registering user!",
+    "register_email" : "In which e-mail can we send your registration?",
+    "email_description" : "It will be used to login and for news about your GREEN...",
+    "enter_password" : "Now enter a password.",
+    "password_remember" : "Remember that the password needs 6 characters. ",
+    "monthly_amount" : "Now let's set a monthly spending figure.",
+    "remember_limit" : "Remember that you can change the limit when you feel comfortable!",
+    "tasks" : "Tasks",
+    "ex_task" : "Ex: Study Flutter",
+    "extract_message" : "Select the month and year that you want to pull the statement:",
+    "jan" : "Jan",
+    "feb" : "Feb",
+    "mar" : "Mar",
+    "apr" : "Apr",
+    "may" : "May",
+    "jun" : "Jun",
+    "jul" : "Jul",
+    "aug" : "Aug",
+    "sep" : "Sep",
+    "oct" : "Oct",
+    "nov" : "Nov",
+    "dec" : "Dec",
+    "select": "Select",
+    "balance": "Balance",
+    "total_expenses": "Total expenses",
+    "remove_transaction": "Are you sure you want to remove this transaction?",
+    "movimentes": " Movimentes",
+    "kids": "Kids",
+    "streaming": "Streaming",
+    "home": "Home",
+    "accounts": "Accounts",
+    "transport": "Transport",
+    "current_limit": "Current Limit",
+    "limit_actual": "Current Financial Limit",
+    "update_limit": "Update Limit",
+    "limit" : "Limit"
 
 }
