--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -38,7 +38,7 @@
     "academy" : "Academia",
     "travel" : "Viaje",
     "pharmacy" : "Botica",
-    "description" : "Descripción",
+    "description" : " Descripción ",
     "value" : "Valor",
     "money" : "€ ",
     "invalid_value" : "Valor inválido",
@@ -72,6 +72,43 @@
     "set_limit" : "Establecer un nuevo límite financiero",
     "limit_updte": "Límite actualizado con éxito!!",
     "update": "Actualizar",
-    "others" : "Otros"
-
+    "others" : "Otros",
+    "register_sucess" : "Registro finalizado con éxito!",
+    "email_already" : "Email ya registrado, por favor elija otro",
+    "error_register" : "¡Error al registrar usuario!",
+    "register_email" : "¿A qué correo electrónico podemos enviarle su inscripción?",
+    "email_description" : "Se utilizará para iniciar sesión y para noticias sobre su GREEN...",
+    "enter_password" : "Ahora introduce una contraseña.",
+    "password_remember" : "Recuerde que la contraseña necesita 6 caracteres. ",
+    "monthly_amount" : "Ahora fijemos una cifra de gasto mensual.",
+    "remember_limit" : "Recuerda que puedes cambiar el límite cuando te sientas cómodo.",
+    "tasks" : "Tareas",
+    "ex_task" : "Ex: Estudio Flutter",
+    "extract_message" : "Seleccione el mes y el año en que desea obtener el extracto:",
+    "jan" : "Ene",
+    "feb" : "Feb",
+    "mar" : "Mar",
+    "apr" : "Abr",
+    "may" : "May",
+    "jun" : "Jun",
+    "jul" : "Jul",
+    "aug" : "Ago",
+    "sep" : "Sep",
+    "oct" : "Oct",
+    "nov" : "Nov",
+    "dec" : "Dic",
+    "select": "Seleccione",
+    "balance": "Saldo",
+    "total_expenses": "Gastos totales",
+    "remove_transaction": "¿Está seguro de que desea eliminar esta transacción?",
+    "moviments": " Movimientos",
+    "kids": "niños",
+    "streaming": "Transmisión",
+    "home": "Casa",
+    "accounts": "Cuentas",
+    "transport": "Transporte",
+    "current_limit": "Límite Actual",
+    "limit_actual": "Límite Financiero Actual",
+    "update_limit": "Actualizar Límite",
+    "limit" : "Límite"
 }
