--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -38,7 +38,7 @@
     "academy" : "Academia",
     "travel" : "Viagem",
     "pharmacy" : "Farmácia",
-    "description" : "Descrição",
+    "description" : "  Descrição ",
     "value" : "Valor",
     "money" : "R$ ",
     "invalid_value" : "Valor inválido",
@@ -72,7 +72,48 @@
     "set_limit" : "Definir novo Limite Financeiro",
     "limit_updte": "Limite atualizado com sucesso!",
     "update": "Atualizar",
-    "others" : "Outros"
+    "others" : "Outros",
+    "register_sucess" : "Cadastro realizado com sucesso!",
+    "email_already" : "Email já cadastrado, por favor escolha outro!",
+    "error_register" : "Erro ao registrar usuário!",
+    "register_email" : "Em qual e-mail podemos fazer o seu cadastro?",
+    "email_description" : "Ele será usado para realizar login e novidades sobre o seu GREEN..",
+    "enter_password" : "Agora digite uma senha.",
+    "password_remember" : "Lembre-se que a senha precisar  6 caracteres. ",
+    "monthly_amount" : "Agora vamos definir um valor de gastos mensais.",
+    "remember_limit" : "Lembre-se que você pode alterar o limite ,quando você se sentir confortável!",
+    "tasks" : "Tarefas",
+    "ex_task" : "Ex: Estudar Flutter",
+    "extract_message" : "Selecione o mês e ano que deseja puxar o extrato:",
+    "jan" : "Jan",
+    "feb" : "Fev",
+    "mar" : "Mar",
+    "apr" : "Abr",
+    "may" : "Mai",
+    "jun" : "Jun",
+    "jul" : "Jul",
+    "aug" : "Ago",
+    "sep" : "Set",
+    "oct" : "Out",
+    "nov" : "Nov",
+    "dec" : "Dez",
+    "select": "Selecione",
+    "balance": "Saldo",
+    "total_expenses": "Gastos total",
+    "remove_transaction": "Tem certeza que deseja remover essa transação?",
+    "moviments": " Movimentações",
+    "kids": "Kids",
+    "streaming": "Streaming",
+    "home": "Casa",
+    "accounts": "Contas",
+    "transport": "Transporte",
+    "current_limit": "Limite Atual",
+    "limit_actual": "Limite financeiro Atual",
+    "update_limit": "Atualizar Limite",
+    "limit" : "Limite"
+    
+
+
 
 }
 
